--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,6 +8,7 @@ host_key_auto_add = True
 
 [ssh_connection]
 ssh_args = '-o UserKnownHostsFile=/dev/null'
+pipelining=True
 scp_if_ssh=True
 
 [persistent_connection]
