--- a/playbooks/check_device.yml
+++ b/playbooks/check_device.yml
@@ -1,10 +1,8 @@
 ---
 - name: "AHV command"
   hosts: hv
-  gather_facts: yes
+  gather_facts: no
   tasks:
-    - name: Distribution
-      debug: msg="{{ ansible_distribution }}"
     - name: check ethtoool
       shell: "ethtool -S eth0"
       register: result
